[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cube4siesta"
version = "0.0.1"
description = "Convert Gaussian cube density to SIESTA .RHO for rho-based restart"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.scripts]
cube4siesta = "cube4siesta.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
